fix : ImageUploader - preview overflow bug

--- a/src/components/imageUploader/style.module.scss
+++ b/src/components/imageUploader/style.module.scss
@@ -38,6 +38,8 @@
 .preview {
   position: relative;
   display: flex;
+  height: 100%;
+  width: 100%;
 }
 
 .img {
